[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/Leaderboard.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=2]

[sub_resource type="Shader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://effects/Grandstander/Grandstander-Black.ttf"

[sub_resource type="DynamicFont" id=4]
size = 22
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://effects/Grandstander/Grandstander-Bold.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFontData" id=8]
font_path = "res://effects/Grandstander/Grandstander-Bold.ttf"

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.572549, 0.572549, 0.572549, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 4.0
expand_margin_right = 4.0

[sub_resource type="DynamicFontData" id=11]
font_path = "res://effects/Grandstander/Grandstander-Bold.ttf"

[sub_resource type="DynamicFont" id=12]
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://effects/Grandstander/Grandstander-Bold.ttf"

[sub_resource type="DynamicFont" id=14]
font_data = SubResource( 13 )

[node name="Leaderboard" type="Node2D"]
material = SubResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 384.0
margin_bottom = 215.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Scores" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_left = 50.0
margin_right = 334.0
margin_bottom = 216.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Scores"]
margin_right = 284.0
margin_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Scores/VBoxContainer"]
margin_top = 2.0
margin_right = 284.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "WORLD  LEADERBOARD"
align = 1

[node name="WRBox" type="HBoxContainer" parent="Scores/VBoxContainer"]
margin_top = 29.0
margin_right = 284.0
margin_bottom = 46.0
alignment = 1

[node name="Label" type="Label" parent="Scores/VBoxContainer/WRBox"]
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "1."

[node name="WR" type="Label" parent="Scores/VBoxContainer/WRBox"]
margin_left = 223.0
margin_right = 284.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 6 )
text = "0.00 km"
align = 2

[node name="padding1" type="Label" parent="Scores/VBoxContainer"]
margin_top = 50.0
margin_right = 284.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 6 )
text = "     ..."

[node name="PBBox" type="HBoxContainer" parent="Scores/VBoxContainer"]
margin_top = 71.0
margin_right = 284.0
margin_bottom = 88.0
alignment = 1

[node name="Label" type="Label" parent="Scores/VBoxContainer/PBBox"]
modulate = Color( 0, 0.87451, 1, 1 )
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "45. (personal best)"

[node name="PB" type="Label" parent="Scores/VBoxContainer/PBBox"]
modulate = Color( 0, 0.87451, 1, 1 )
margin_left = 223.0
margin_right = 284.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 6 )
text = "0.00 km"
align = 2

[node name="padding2" type="Label" parent="Scores/VBoxContainer"]
margin_top = 92.0
margin_right = 284.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 6 )
text = "     ..."

[node name="P2Box" type="HBoxContainer" parent="Scores/VBoxContainer"]
margin_top = 113.0
margin_right = 284.0
margin_bottom = 130.0
alignment = 1

[node name="Label" type="Label" parent="Scores/VBoxContainer/P2Box"]
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "88."

[node name="P2" type="Label" parent="Scores/VBoxContainer/P2Box"]
margin_left = 223.0
margin_right = 284.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 6 )
text = "0.00 km"
align = 2

[node name="P1Box" type="HBoxContainer" parent="Scores/VBoxContainer"]
margin_top = 134.0
margin_right = 284.0
margin_bottom = 151.0
alignment = 1

[node name="Label" type="Label" parent="Scores/VBoxContainer/P1Box"]
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "89."

[node name="P1" type="Label" parent="Scores/VBoxContainer/P1Box"]
margin_left = 223.0
margin_right = 284.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 6 )
text = "0.00 km"
align = 2

[node name="CurrentBox" type="HBoxContainer" parent="Scores/VBoxContainer"]
margin_top = 155.0
margin_right = 284.0
margin_bottom = 172.0
alignment = 1

[node name="Label" type="Label" parent="Scores/VBoxContainer/CurrentBox"]
modulate = Color( 0, 0.87451, 1, 1 )
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "90. (current score)"

[node name="Current" type="Label" parent="Scores/VBoxContainer/CurrentBox"]
modulate = Color( 0, 0.87451, 1, 1 )
margin_left = 223.0
margin_right = 284.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 6 )
text = "0.00 km"
align = 2

[node name="M1Box" type="HBoxContainer" parent="Scores/VBoxContainer"]
margin_top = 176.0
margin_right = 284.0
margin_bottom = 193.0
alignment = 1

[node name="Label" type="Label" parent="Scores/VBoxContainer/M1Box"]
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "91."

[node name="M1" type="Label" parent="Scores/VBoxContainer/M1Box"]
margin_left = 223.0
margin_right = 284.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 6 )
text = "0.00 km"
align = 2

[node name="M2Box" type="HBoxContainer" parent="Scores/VBoxContainer"]
margin_top = 197.0
margin_right = 284.0
margin_bottom = 214.0
alignment = 1

[node name="Label" type="Label" parent="Scores/VBoxContainer/M2Box"]
margin_right = 219.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "92."

[node name="M2" type="Label" parent="Scores/VBoxContainer/M2Box"]
margin_left = 223.0
margin_right = 284.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 6 )
text = "0.00 km"
align = 2

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 54.0
margin_top = 73.0
margin_right = 331.0
margin_bottom = 154.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_top = 11.0
margin_right = 277.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 9 )
text = "New record!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Panel"]
margin_left = 10.6265
margin_top = 41.5546
margin_right = 224.626
margin_bottom = 72.5546
focus_mode = 1
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
max_length = 14
context_menu_enabled = false
placeholder_text = "enter your name"
placeholder_alpha = 0.299
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
margin_left = 235.29
margin_top = 42.6637
margin_right = 267.29
margin_bottom = 71.6637
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.839216, 0.839216, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.0705882, 0.0509804, 0.0509804, 1 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" parent="." instance=ExtResource( 2 )]

[node name="GlobalMenus" parent="UI" index="0"]
visible = false

[node name="AnimatedSprite" parent="UI/GlobalMenus/HowToPlay" index="0"]
frame = 0

[node name="Label" parent="UI" index="2"]
visible = false
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]

[editable path="UI"]
